# codon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_debug.bat  run_debug.bat
.github/workflows/: cmake-multi-platform.yml
include/: codon.h  error.h  random.h  readwrite.h  seq.h  testing.h  types.hpp
src/: codon.cpp  error.cpp  logging.cpp  main.cpp  readwrite.cpp  seq.cpp  types.cpp
test/: test_codon.cpp  test_instantiator.cpp  test_lib.cpp  test_locator.cpp  test_seq.cpp
